--- a/hello/templates/hello/index.html
+++ b/hello/templates/hello/index.html
@@ -8,15 +8,18 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.css" 
             rel="stylesheet" crossorigin="anonymous">
     </head>
-    <body class="contener">
-        <h1 class="display-4 text-primary mb-4">{{title}}</h1>
-        <p class="h5 mt-4">{{message|safe}}</p>
+        <body class="container">
+        <h1 class="display-4 text-primary">{{title}}</h1>
+        <p class="lead">{{lead|safe}}</p>
+        <img src="{% static 'hello/images/pose_atama_kakaeru_woman_blank.png' %}" width=25% alt="wakaran">
+        <p class="h5 mt-4">{{result|safe}}</p>
         <form action="{% url 'index' %}" method="post">
             {% csrf_token %}
-            {{ form }}
-            <!-- <label for="msg" class="form-label">message: </label>
-            <input id="msg" type="text" name="msg" class="form-control"> -->
-            <input type="submit" value="click" class="btn btn-primary">
+            <table>
+                {{ form.as_p }}
+                <tr><td></td><td>
+                <input type="submit" class="btn btn-primary my-2" value="click">
+            </table>
         </form>
     </body>
 </html>
