--- a/hello/templates/hello/index.html
+++ b/hello/templates/hello/index.html
@@ -1,25 +1,55 @@
 {% load static %}
 <!doctype html>
-<html lang=ja>
-    <head>
-        <meta charaset="utf-8">
-        <title>{{title}}</title>
-        <!-- CSS only -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.css" 
-            rel="stylesheet" crossorigin="anonymous">
-    </head>
-        <body class="container">
-        <h1 class="display-4 text-primary">{{title}}</h1>
-        <p class="lead">{{lead|safe}}</p>
-        <img src="{% static 'hello/images/pose_atama_kakaeru_woman_blank.png' %}" width=25% alt="wakaran">
-        <p class="h5 mt-4">{{result|safe}}</p>
-        <form action="{% url 'index' %}" method="post">
-            {% csrf_token %}
-            <table>
-                {{ form.as_p }}
-                <tr><td></td><td>
-                <input type="submit" class="btn btn-primary my-2" value="click">
-            </table>
-        </form>
-    </body>
+<html lang="ja">
+<head>
+    <meta charset="utf-8">
+    <title>{{title}}</title>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.css" 
+        rel="stylesheet" crossorigin="anonymous">
+</head>
+<body class="container">
+    <h1 class="display-1 text-success">{{title}}</h1>
+    <p class="lead text-secondary">{{lead|safe}}</p>
+    <img src="{% static 'hello/images/Django-e1646279596675.png' %}" width=25% alt="django-logo">
+    <!-- <p class="h6 mt-4">{{data}}</p> -->
+    <table class="table">
+        <tr>
+            <th>data</th>
+        </tr>
+    {% for item in data %}
+        <tr>
+            <td>{{item}}</td>
+        </tr>
+    {% endfor %}
+    </table>
+    <!-- <p class="h3 mt-4 mb-4">{{message|safe}}</p>
+    <form action="{% url 'index' %}" method="post">
+        {% csrf_token %}
+        {{ form }}
+        <input type="submit" value="click">
+    </form>
+    <hr> -->
+    <!-- <table class="table">
+        <tr>
+            <th>ID</th>
+            <th>NAME</th>
+            <th>GENDER</th>
+            <th>MAIL</th>
+            <th>AGE</th>
+            <th>BIRTHDAY</th>
+        </tr>
+    {% for item in data %}
+        <tr>
+            <td>{{item.id}}</td>
+            <td>{{item.name}}</td>
+            <td>{% if item.gender == False %}male{% endif %}
+                {% if item.gender == True %}female{% endif %}</td>
+            <td>{{item.mail}}</td>
+            <td>{{item.age}}</td>
+            <td>{{item.birthday}}</td>
+        </tr>
+    {% endfor %}
+    </table> -->
+</body>
 </html>
