--- a/hello/templates/hello/check.html
+++ b/hello/templates/hello/check.html
@@ -9,15 +9,12 @@
         rel="stylesheet" crossorigin="anonymous">
 </head>
 <body class="container">
-    <h1 class="display-4 text-danger">{{title}}</h1>
-    <form action="{% url 'create' %}" method="post">
+    <h1 class="display-4 text-success">{{title}}</h1>
+    <p>{{message|safe}}</p>
+    <form action="{% url 'check' %}" method="post">
         {% csrf_token %}
-        <table class="table">
-            {{ form.as_table }}
-            <tr><th><td>
-                <input type="submit" value="click" class="btn btn-danger mt-2">
-            </td></th></tr>
-        </table>
+        {{ form.as_table }}
+        <input type="submit" value="click" class="btn btn-success mt-2">   
     </form>
 </body>
 </html>
