--- a/hello/templates/hello/edit.html
+++ b/hello/templates/hello/edit.html
@@ -9,13 +9,13 @@
         rel="stylesheet" crossorigin="anonymous">
 </head>
 <body class="container">
-    <h1 class="display-4 text-danger">{{title}}</h1>
-    <form action="{% url 'create' %}" method="post">
+    <h1 class="display-4 text-warning">{{title}}</h1>
+    <form action="{% url 'edit' id %}" method="post">
         {% csrf_token %}
         <table class="table">
             {{ form.as_table }}
             <tr><th><td>
-                <input type="submit" value="click" class="btn btn-danger mt-2">
+                <input type="submit" value="click" class="btn btn-warning mt-2">
             </td></th></tr>
         </table>
     </form>
