--- a/hello/templates/hello/find.html
+++ b/hello/templates/hello/find.html
@@ -9,11 +9,16 @@
         rel="stylesheet" crossorigin="anonymous">
 </head>
 <body class="container">
-    <h1 class="display-1 text-success">{{title}}</h1>
-    <p class="lead text-secondary">{{lead|safe}}</p>
-    <img src="{% static 'hello/images/Django-e1646279596675.png' %}" width=25% alt="django-logo">
+    <h1 class="display-4 text-success">{{title}}</h1>
     <p>{{message|safe}}</p>
-    <!-- <p class="h6 mt-4">{{data}}</p> -->
+    <form action="{% url 'find' %}" method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <tr><th></th>
+            <td><input type="submit" value="click" class="btn btn-success mt-2"></td>
+        </tr>      
+    </form>
+    <hr>
     <table class="table">
         <tr>
             <th>id</th>
